--- a/index.html
+++ b/index.html
@@ -1,27 +1,14 @@
+<!DOCTYPE html>
 <html>
-<body>
+<head>
 
-<div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'London')">London</button>
-  <button class="tablinks" onclick="openCity(event, 'Paris')">Paris</button>
-  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Tokyo</button>
-</div>
+<h1>Computo en la nube<h1>
 
-<!-- Tab content -->
-<div id="London" class="tabcontent">
-  <h3>London</h3>
-  <p>London is the capital city of England.</p>
-</div>
+    <h3>La transformación digital ayuda a las empresas a aumentar rápidamente la eficiencia, la agilidad y la conectividad a medida que usan la tecnología para transformar los procesos empresariales en algo más simple, rápido, seguro, flexible y rentable. La tecnología de computación en nube es un pilar de la transformación digital.<h3>
+        <br>
+<h3>¿Cuáles son las ventajas de la computación en nube?<h3>
+    <p>La computación en nube ofrece a las empresas modelos prácticos para acceder a las ofertas de infraestructura, plataforma y software de pago por uso. Con la computación en nube, las empresas pueden liberar capital, optimizar el mantenimiento de TI, modernizar y escalar los enfoques empresariales, convertir la seguridad y la flexibilidad en servicios y soluciones, ayudar a los clientes de nuevas maneras, y hacer crecer su empresa en las condiciones de mercado siempre cambiantes.<p>
 
-<div id="Paris" class="tabcontent">
-  <h3>Paris</h3>
-  <p>Paris is the capital of France.</p>
-</div>
 
-<div id="Tokyo" class="tabcontent">
-  <h3>Tokyo</h3>
-  <p>Tokyo is the capital of Japan.</p>
-</div>
-  
 </body>
 </html>
